--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -11,7 +11,10 @@
   <meta name="author" content="Bucky Maler">
   <link rel="icon" href="./assets/img/logo.png">
   <link rel="stylesheet" href="assets/css/main.css">
-
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+    integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous">
+    </script>
+  <script src="../JS/ajaxCalls.js"></script>
   <script>
     const baseApi = 'https://localhost:7091/api/Users'
     $(document).ready(() => {
@@ -225,111 +228,29 @@
               </div>
             </li>
             <li class="l-section section">
-              <div class="hire">
-                <h2>Log in to enjoy your music</h2>
-                <!-- checkout formspree.io for easy form setup -->
-                <form id="" class="work-request">
-                  <div class="work-request--options">
-                    <span class="options-a">
-                      <input id="opt-1" type="checkbox" value="app design">
-                      <label for="opt-1">
-                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                          xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 111"
-                          style="enable-background:new 0 0 150 111;" xml:space="preserve">
-                          <g transform="translate(0.000000,111.000000) scale(0.100000,-0.100000)">
-                            <path
-                              d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z" />
-                          </g>
-                        </svg>
-                        App Design
-                      </label>
-                      <input id="opt-2" type="checkbox" value="graphic design">
-                      <label for="opt-2">
-                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                          xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 111"
-                          style="enable-background:new 0 0 150 111;" xml:space="preserve">
-                          <g transform="translate(0.000000,111.000000) scale(0.100000,-0.100000)">
-                            <path
-                              d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z" />
-                          </g>
-                        </svg>
-                        Graphic Design
-                      </label>
-                      <input id="opt-3" type="checkbox" value="motion design">
-                      <label for="opt-3">
-                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                          xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 111"
-                          style="enable-background:new 0 0 150 111;" xml:space="preserve">
-                          <g transform="translate(0.000000,111.000000) scale(0.100000,-0.100000)">
-                            <path
-                              d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z" />
-                          </g>
-                        </svg>
-                        Motion Design
-                      </label>
-                    </span>
-                    <span class="options-b">
-                      <input id="opt-4" type="checkbox" value="ux design">
-                      <label for="opt-4">
-                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                          xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 111"
-                          style="enable-background:new 0 0 150 111;" xml:space="preserve">
-                          <g transform="translate(0.000000,111.000000) scale(0.100000,-0.100000)">
-                            <path
-                              d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z" />
-                          </g>
-                        </svg>
-                        UX Design
-                      </label>
-                      <input id="opt-5" type="checkbox" value="webdesign">
-                      <label for="opt-5">
-                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                          xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 111"
-                          style="enable-background:new 0 0 150 111;" xml:space="preserve">
-                          <g transform="translate(0.000000,111.000000) scale(0.100000,-0.100000)">
-                            <path
-                              d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z" />
-                          </g>
-                        </svg>
-                        Webdesign
-                      </label>
-                      <input id="opt-6" type="checkbox" value="marketing">
-                      <label for="opt-6">
-                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                          xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 111"
-                          style="enable-background:new 0 0 150 111;" xml:space="preserve">
-                          <g transform="translate(0.000000,111.000000) scale(0.100000,-0.100000)">
-                            <path
-                              d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z" />
-                          </g>
-                        </svg>
-                        Marketing
-                      </label>
-                    </span>
-                  </div>
-                  <div class="work-request--information">
-                    <div class="information-email">
-                      <input id="logEmailInp" type="email" spellcheck="false">
-                      <label for="email">Email</label>
+              <div class="contact">
+                <div class="contact--lockup">
+                  <div class="modal">
+                    <div class="modal--information">
+                      <p>Pawia 5, 31-154 Kraków, Poland</p>
+                      <a href="mailto:ouremail@gmail.com">ouremail@gmail.com</a>
+                      <a href="tel:+148126287560">+48 12 628 75 60</a>
                     </div>
-                    <div class="information-name">
-                      <input id="logPassInp" type="text" spellcheck="false">
-                      <label for="password">password</label>
-                    </div>
+                    <ul class="modal--options">
+                      <li><a href="#0">Bēhance</a></li>
+                      <li><a href="#0">dribbble</a></li>
+                      <li><a href="mailto:ouremail@gmail.com">Contact Us</a></li>
+                    </ul>
                   </div>
-                  <input type="submit" value="Log In">
-                </form>
-                <!-- <div>
-                  <span>Not a Member? </span><a href="../Pages/register.html">Sign Up Now</a>
-                </div> -->
+                </div>
               </div>
             </li>
             <li class="l-section section">
               <div class="hire">
                 <h2>Log in to enjoy your music</h2>
                 <!-- checkout formspree.io for easy form setup -->
-                <form id="" class="work-request">
-                  <div class="work-request--options">
+                <form id="loginForm" class="work-request">
+                  <!-- <div class="work-request--options">
                     <span class="options-a">
                       <input id="opt-1" type="checkbox" value="app design">
                       <label for="opt-1">
@@ -406,7 +327,7 @@
                         Marketing
                       </label>
                     </span>
-                  </div>
+                  </div> -->
                   <div class="work-request--information">
                     <div class="information-email">
                       <input id="logEmailInp" type="email" spellcheck="false">
@@ -419,9 +340,9 @@
                   </div>
                   <input type="submit" value="Log In">
                 </form>
-                <!-- <div>
+                <div>
                   <span>Not a Member? </span><a href="../Pages/register.html">Sign Up Now</a>
-                </div> -->
+                </div>
               </div>
             </li>
           </ul>
