--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -14,7 +14,7 @@
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"
     integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous">
     </script>
-  <script src="../JS/ajaxCalls.js"></script>
+  <script src="./assets/js/ajaxCalls.js"></script>
   <script>
     const baseApi = 'https://localhost:7091/api/Users'
     $(document).ready(() => {
@@ -31,31 +31,36 @@
         ajaxCall("POST", baseApi + "/login", JSON.stringify(User), successCBLogin, errorCBLogin);
 
         return false;
+      })
 
+        function successCB(data) {
+          localStorage["user"] = JSON.stringify(data);
+        }
+        function errorCB(error) {
+          let message = error.responseText.split(" ");
+          Swal.fire({
+            icon: 'error',
+            text: message,
+          })
+        }
+      })
+
+
+  </script>
+  <script>
+      $(document).ready(() => {
         for (let i = 0; i < 3; i++) {
           ajaxCall("GET", `https://localhost:7091/api/Songs/randomSong`, "", successCBRandom, errorCB);
 
         }
       })
+
       let i = 1;
       function successCBRandom(data) {
         $(`#randTitle${i}`).html(data.name)
         $(`#randPara${i}`).html(data.artistName)
         i++;
       }
-      function successCB(data) {
-        localStorage["user"] = JSON.stringify(data);
-      }
-      function errorCB(error) {
-        let message = error.responseText.split(" ");
-        Swal.fire({
-          icon: 'error',
-          text: message,
-        })
-      }
-    })
-
-
   </script>
 </head>
 
