--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -11,6 +11,7 @@
   <meta name="author" content="Bucky Maler">
   <link rel="icon" href="./assets/img/logo.png">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"
     integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous">
     </script>
@@ -116,7 +117,7 @@
     })
 
   </script>
- 
+
 </head>
 
 <body>
@@ -178,17 +179,23 @@
                   <img src="assets/img/mainImage.png" alt="Welcome">
                 </div>
                 <div class="intro--options">
-                  <a href="#0">
-                    <h3 id="randTitle1"></h3>
-                    <p id="randPara1"></p>
+                  <a class="randSongs randSong1">
+                    <h3 class="randTitle1" style="display: inline-block;"></h3>
+                    <p class="randPara1"></p>
+                    <br>
+                    <i class="fa fa-heart-o " id="randHeart1" style="font-size:16px;"></i>
                   </a>
-                  <a href="#0">
-                    <h3 id="randTitle2"></h3>
-                    <p id="randPara2"></p>
+                  <a class="randSongs">
+                    <h3 class="randTitle2"></h3>
+                    <p class="randPara2"></p>
+                    <br>
+                    <i class="fa fa-heart-o " id="randHeart2" style="font-size:16px;"></i>
                   </a>
-                  <a href="#0">
-                    <h3 id="randTitle3"></h3>
-                    <p id="randPara3"></p>
+                  <a class="randSongs">
+                    <h3 class="randTitle3"></h3>
+                    <p class="randPara3"></p>
+                    <br>
+                    <i class="fa fa-heart-o" id="randHeart3" style="font-size:16px;"></i>
                   </a>
                 </div>
               </div>
@@ -315,11 +322,11 @@
   <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')</script>
   <script src="assets/js/functions-min.js"></script>
   <script>
-    const baseApiOfek = 'https://localhost:7091/api/'
+    const baseApiOfek = 'https://localhost:7091/api'
     $(document).ready(() => {
-      ajaxCall("GET", baseApiOfek + `Songs/randomSong`, "", successCBRandom1, errorCB);
-      ajaxCall("GET", baseApiOfek + `Songs/randomSong`, "", successCBRandom2, errorCB);
-      ajaxCall("GET", baseApiOfek + `Songs/randomSong`, "", successCBRandom3, errorCB);
+      ajaxCall("GET", baseApiOfek + `/Songs/randomSong`, "", successCBRandom1, errorCB);
+      ajaxCall("GET", baseApiOfek + `/Songs/randomSong`, "", successCBRandom2, errorCB);
+      ajaxCall("GET", baseApiOfek + `/Songs/randomSong`, "", successCBRandom3, errorCB);
 
       const checkboxes = document.querySelectorAll('input[type="checkbox"][name="song-option"]');
 
@@ -341,13 +348,13 @@
         let userInput = $('#searchInput').val();
         switch (checkedValue) {
           case "songName":
-            serachApi = baseApiOfek + `Songs/${userInput}/info`
+            serachApi = baseApiOfek + `/Songs/${userInput}/info`
             break;
           case "artist":
-            serachApi = baseApiOfek + `Artists/${userInput}/songs`
+            serachApi = baseApiOfek + `/Artists/${userInput}/songs`
             break;
           case "lyrics":
-            serachApi = baseApiOfek + `Songs/songBylyrics?lyrics=${userInput}`
+            serachApi = baseApiOfek + `/Songs/songBylyrics?lyrics=${userInput}`
             break;
           default: return false;
         }
@@ -355,8 +362,25 @@
         return false;
       })
 
-    })
+      $(".randSongs").on("click", function () {
+        if (localStorage.user === undefined) {
+          Swal.fire({
+            icon: 'error',
+            text: "Please Log in to add song to Favorites",
+          })
+          return;
+        }
+        ajaxCall("POST", baseApiOfek + `/Users/${JSON.parse(localStorage.user).id}/${this.id}`, "", successCBAddToFavorite, errorCB);
+        
+      })
 
+    })
+    function successCBAddToFavorite() {
+      Swal.fire({
+        icon: 'success',
+        text: "Song added to your Favorites"
+      })
+    }
     function successCBSong(data) {
       console.log(data)
       $("#songs").html("")
@@ -518,20 +542,27 @@
 
     }
     function successCBRandom1(data) {
-      $(`#randTitle1`).html(data.name)
-      $(`#randPara1`).html(data.artistName)
+      $(`.randTitle1`).html(data.name)
+      $(`.randPara1`).html(data.artistName)
+      $(`.randSong1`).attr('id', data.id)
     }
     function successCBRandom2(data) {
-      $(`#randTitle2`).html(data.name)
-      $(`#randPara2`).html(data.artistName)
+      $(`.randTitle2`).html(data.name)
+      $(`.randPara2`).html(data.artistName)
+      $(`.randSong2`).attr('id', data.id)
     }
     function successCBRandom3(data) {
-      $(`#randTitle3`).html(data.name)
-      $(`#randPara3`).html(data.artistName)
+      $(`.randSong3`).attr('id', data.id)
+      $(`.randTitle3`).html(data.name)
+      $(`.randPara3`).html(data.artistName)
     }
 
-    function errorCB(data) {
-      console.log(data);
+    function errorCB(error) {
+      let message = error.responseText;
+      Swal.fire({
+        icon: 'error',
+        text: message,
+      })
     }
   </script>
 </body>
